--- a/chatapp/templates/home.html
+++ b/chatapp/templates/home.html
@@ -7,18 +7,28 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="w-1/4 border-r border-slate-300 h-screen overflow-y-auto bg-white">
+  <body class="bg-gray-100 block md:flex items-center justify-center min-h-screen relative">
+
+    <div class="w-full md:w-1/3 border-r border-slate-300 h-screen overflow-y-auto bg-white">
       {% for room in rooms %}
-        <a href="{% url 'room' room_name=room.name %}" class="border-b border-slate-300 h-20 flex justify-start items-center">
-          <div class="h-16 w-16 rounded-full shadow-md border border-slate-100">
-            <img src="https://bisswas.com/media/ProductImg/500error.jpg" alt="" class="h-full w-full rounded-full" />
+        <div class="flex justify-between items-center h-20 border-b border-slate-300">
+          <a href="{% url 'room' room_name=room.name %}" class="flex items-center w-full pl-3">
+            <div class="h-12 lg:h-16 w-12 lg:w-16 rounded-full shadow-md border border-slate-100">
+              <img src="{{ room.image_url|default:'https://bisswas.com/media/ProductImg/500error.jpg' }}" alt="{{ room.name }}" class="h-full w-full rounded-full" />
+            </div>
+            <div class="ml-3 lg:ml-5">
+              <p class="font-semibold">{{ room.name|capfirst }}</p>
+              <p class="text-gray-500 text-sm truncate">
+                {% for i in room.messages.all %}
+                  {% if forloop.last %}{{ i.content }}{% endif %}
+                {% endfor %}
+              </p>
+            </div>
+          </a>
+          <div class="ml-3 pr-3"> 
+            <a href="{% url 'delete_room' room.id %}" class="bg-blue-400 text-white px-3 py-1 rounded hover:bg-blue-600" onclick="return confirm('Are you sure you want to delete this room?');">Del</a>
           </div>
-          <div class="ml-5">
-            <p class="font-semibold">{{ room.name }}</p>
-            <p class="text-gray-500 font-sm">hi lian. how are you</p>
-          </div>
-        </a>
+        </div>
       {% endfor %}
 
       <form action="{% url 'new_room' %}" method="post" class="border-b border-slate-300 h-20 flex justify-start items-center">
@@ -26,14 +36,15 @@
         <div class="ml-5">
           <label for="">Create New Room</label>
           <div class="flex">
-            <input type="text" name="room_name" id="" class="border border-slate-300 py-1" />
-            <input type="submit" id="" class="border border-slate-300 bg-blue-400 p-1 rounded" value="Create" />
+            <input type="text" name="room_name" class="border border-slate-300 py-1" required />
+            <input type="submit" class="text-white border border-slate-300 bg-blue-400 hover:bg-blue-600 p-1 rounded" value="Create" />
           </div>
         </div>
       </form>
     </div>
-    <div class="w-3/4 flex items-center justify-center">
-      <div class="w-full max-w-2xl bg-white shadow-lg rounded-lg">
+
+    <div class="hidden md:block w-2/3 flex items-center justify-center px-10">
+      <div class="w-full bg-white shadow-lg rounded-lg">
         <img src="https://bisswas.com/media/ProductImg/500error.jpg" alt="" class="opacity-50" />
       </div>
     </div>
